// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NowPlayingCard > matches snapshot when paused 1`] = `
<a
  aria-label="Open in Spotify: Test Track"
  class="MuiBox-root css-1wokdvp"
  href="https://open.spotify.com/track/play-1"
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 nowplaying--spotify css-1wy2kwt-MuiPaper-root"
    style="--Paper-shadow: none; opacity: 1; transform: none;"
    tabindex="0"
  >
    <div
      class="MuiBox-root css-spixek"
    >
      <div
        class="MuiAvatar-root MuiAvatar-rounded css-abauh4-MuiAvatar-root"
      >
        <img
          alt="Album"
          class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
          decoding="async"
          loading="lazy"
          referrerpolicy="no-referrer"
          src="https://example.com/cover.jpg"
        />
      </div>
    </div>
    <div
      aria-live="polite"
      class="MuiBox-root css-wr3v6d"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 np-title css-7yakwh-MuiTypography-root"
      >
        Test Track
      </p>
      <p
        class="MuiTypography-root MuiTypography-body2 np-art css-3ya38w-MuiTypography-root"
      >
        Tester
      </p>
      <div
        aria-hidden="true"
        class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-k6o8te-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
        >
          Paused
        </span>
      </div>
      <div
        class="MuiBox-root css-1gj2vl9"
      >
        <span
          aria-label="Track progress"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="17"
          class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate progress css-3yrdhv-MuiLinearProgress-root"
          role="progressbar"
        >
          <span
            class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-l16vtb-MuiLinearProgress-bar1"
            style="transform: translateX(-83.33333333333334%);"
          />
        </span>
        <span
          class="MuiTypography-root MuiTypography-caption np-time css-1qfol84-MuiTypography-root"
        >
          0:30
           / 
          3:00
        </span>
      </div>
    </div>
  </div>
</a>
`;

exports[`NowPlayingCard > matches snapshot when playing 1`] = `
<a
  aria-label="Open in Spotify: Test Track"
  class="MuiBox-root css-1wokdvp"
  href="https://open.spotify.com/track/play-1"
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 nowplaying--spotify css-1wy2kwt-MuiPaper-root"
    style="--Paper-shadow: none; opacity: 1; transform: none;"
    tabindex="0"
  >
    <div
      class="MuiBox-root css-spixek"
    >
      <div
        class="MuiAvatar-root MuiAvatar-rounded css-abauh4-MuiAvatar-root"
      >
        <img
          alt="Album"
          class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
          decoding="async"
          loading="lazy"
          referrerpolicy="no-referrer"
          src="https://example.com/cover.jpg"
        />
      </div>
    </div>
    <div
      aria-live="polite"
      class="MuiBox-root css-wr3v6d"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 np-title css-7yakwh-MuiTypography-root"
      >
        Test Track
      </p>
      <p
        class="MuiTypography-root MuiTypography-body2 np-art css-3ya38w-MuiTypography-root"
      >
        Tester
      </p>
      <div
        class="MuiBox-root css-1gj2vl9"
      >
        <span
          aria-label="Track progress"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="17"
          class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate progress css-3yrdhv-MuiLinearProgress-root"
          role="progressbar"
        >
          <span
            class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-l16vtb-MuiLinearProgress-bar1"
            style="transform: translateX(-83.33333333333334%);"
          />
        </span>
        <span
          class="MuiTypography-root MuiTypography-caption np-time css-1qfol84-MuiTypography-root"
        >
          0:30
           / 
          3:00
        </span>
      </div>
    </div>
  </div>
</a>
`;
